samples/_failures_safe/1761693480_db53b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a453c7de.c: In function ‘main’:
./samples/SAFE/__tmp_a453c7de.c:154:5: error: expected expression at end of input
  154 |     if (fgets(input, sizeof(input), stdin) ==
      |     ^~
./samples/SAFE/__tmp_a453c7de.c:154:5: error: expected declaration or statement at end of input
